--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </form></p>
     </div>
     <!-- Yandex Games SDK -->
-<!-- <script src="https://yandex.ru/games/sdk/v2"></script> выдает дохуя ошибок и варнов в душе не ебу что с ним делать-->
+<!-- <script src="https://yandex.ru/games/sdk/v2"></script> -->
     <script src="clicker.js"></script>
 </body>
 </html>
